# sitdown

./: .env.example  .gitignore  Makefile  README.md  __main__.py  api-test.sh  linear.py  pyproject.toml
src/sitdown/: cli.py  linear.py  llm.py  slack.py  snowflake.py  template.py
